--- a/PHP MVC/composer.json
+++ b/PHP MVC/composer.json
@@ -21,7 +21,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "rizdev\\Belajar\\PHP\\MVC\\": "tests"
+            "rizdev\\Belajar\\PHP\\MVC\\": "test"
         }
     }
 
